# work

./: Cargo.toml  README.md  test.db
migrations/2020-07-15-165409_create_events/: down.sql  up.sql
src/: cli.rs  config.rs  database.rs  event.rs  frontend.rs  fuzzy.rs  lib.rs  main.rs  models.rs  schema.rs  tests.rs
src/src/: config.rs  frontend.rs  fuzzy.rs  main.rs
