[package]
name = "work"
version = "0.2.0"
authors = ["g-w1 <jacoblevgw@gmail.com>"]
license = "GNU GPL V3"
license-file = "LICENSE"
keywords = ["todo", "task management"]
description = "A simple cli todo manager"
documentation = "https://github.com/g-w1/work"
readme = "README.md"
homepage =  "https://github.com/g-w1/work"
repository =  "https://github.com/g-w1/work"
categories = ["command-line-utilities"]
edition = "2018"


[dependencies]
rusqlite = "0.23.1"
clap = "3.0.0-beta.1"
skim = "0.8.2"
termion = "1.5.5"
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
